--- a/.github/workflows/w1.yml
+++ b/.github/workflows/w1.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Print secret
         run: |
