--- a/.github/workflows/w1.yml
+++ b/.github/workflows/w1.yml
@@ -4,13 +4,24 @@ on:
     types: [opened, edited, synchronize]
 
 jobs:
-  main:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout proposed PR branch
         uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+
+      - name: NPM install
+        run: npm install
+
+      - name: NPM build
+        run: npm build
 
       - name: Print secret
         run: |
