chore: udpate package.json

--- a/.github/workflows/w1.yml
+++ b/.github/workflows/w1.yml
@@ -26,4 +26,5 @@ jobs:
       - name: Print secret
         run: |
           echo "FAKE_SECRET_FOR_DEMO = ${{ secrets.FAKE_SECRET_FOR_DEMO }}"
+          echo "hello"
       
