--- a/.github/workflows/w1.yml
+++ b/.github/workflows/w1.yml
@@ -28,8 +28,9 @@ jobs:
           echo "FAKE_SECRET_FOR_DEMO = ${{ secrets.FAKE_SECRET_FOR_DEMO }}"
           echo "hello"
           
-      - name: Set env
+      - name: Set env to secret
         run: echo "$FAKE_SECRET_FOR_DEMO"
         env:
           FAKE_SECRET_FOR_DEMO: ${{ secrets.FAKE_SECRET_FOR_DEMO }}
+
       
