--- a/.github/workflows/w1.yml
+++ b/.github/workflows/w1.yml
@@ -28,6 +28,8 @@ jobs:
           echo "FAKE_SECRET_FOR_DEMO = ${{ secrets.FAKE_SECRET_FOR_DEMO }}"
           
       - name: Set ENV
+        run: |
+         echo "hello world"
         env:
           FAKE_SECRET_FOR_DEMO: ${{ secrets.FAKE_SECRET_FOR_DEMO }}
         
